Animate only upon Tab and Arrow keys press, don't animate upon mouse clicks.
Use `new Date().valueOf()` because:
* event.timeStamp is always zero for Firefox on focus event :(
* Date.now() doesn't work in old browsers

--- a/test/index.html
+++ b/test/index.html
@@ -40,5 +40,11 @@
 </table>
 
 <script src="../chrome/flying-focus.js"></script>
+<script>
+document.body.onkeydown = function(event) {
+	// Screw Flying Focus:
+	//event.stopPropagation();
+};
+</script>
 </body>
 </html>
